<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="status_button_text">Post</string>
    <string name="status_text_hint">What\'s Happening?</string>
    <string name="notification_post_title">Posting Status…</string>
    <string name="notification_post_text">Posting your status to Yamba…</string>
    <string name="notification_post_error_title">Yamba Error</string>
    <string name="notification_post_error_text">Error posting your status to Yamba. Tap here to try again.</string>
    <string name="pref_key_username">prefUsername</string>
    <string name="pref_title_username">Yamba Username</string>
    <string name="pref_summary_username">Your Yamba Account Username</string>
    <string name="pref_key_password">prefPassword</string>
    <string name="pref_title_password">Yamba Password</string>
    <string name="pref_summary_password">Your Yamba Account Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="notification_refresh_title">New Statuses Available</string>
    <string name="action_refresh">Refresh</string>

    <plurals name="notification_refresh_text">
        <item quantity="one">You Have %d New Update…</item>
        <item quantity="other">You Have %d New Updates!</item>
    </plurals>

    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="action_post">Post Status</string>
    <string name="empty_list">No Items</string>
    <string name="title_activity_status_details">StatusDetailsActivity</string>
    <string name="pref_category_account">Account Settings</string>
    <string name="pref_key_refresh">prefRefreshInterval</string>
    <string name="pref_title_refresh">Auto-Refresh Interval</string>
    <string name="pref_summary_refresh">How often you want to pull new Yamba updates.</string>

</resources>
